# tlstrust

./: .dockerignore  .env.local  .gitignore  .gitlab-ci.yml  .in  .out  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  Makefile  README.md  README.rst  pyproject.toml  requirements-ci.txt  requirements.txt  setup.py  stency.json
.examples/: ssllabs.com.json  stency.io.json  www.trivialsec.com.json
docs/: 0.index.md  1.getting-started.md  2.platforms.md  3.browsers.md  4.languages.md  5.cli.md  z.change-log.md
src/: cli.py  main.py  test_context.py  test_truststore.py  test_util.py
src/tlstrust/: __init__.py  android.py  apple.py  ccadb.py  certificates.py  cli.py  context.py  java.py  linux.py  util.py
src/tlstrust/cli/: __main__.py
src/tlstrust/stores/: __init__.py  android.py  android_10.py  android_11.py  android_12.py  android_13.py  android_14.py  android_2_2.py  android_2_3.py  android_3.py  android_4.py  android_4_4.py  android_7.py  android_8.py  android_9.py  android_latest.py  apple.py  ccadb.py  certifi.py  curl.py  dart.py  java.py  linux.py  rustls.py
